mysql-stateful.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql-statefulset
  namespace: wordpress

spec:
  serviceName: mysql-service
  replicas: 1 #because we have only 1 pv

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:

      - name: mysql-container
        image: mysql:8.0

        ports:
        - containerPort: 3306

        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"

        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -h 127.0.0.1 -u root -p$MYSQL_ROOT_PASSWORD

          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -h 127.0.0.1 -u root -p$MYSQL_ROOT_PASSWORD

          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3

        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql

      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: local-pvc-mysql
