wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wp-deployment
  namespace: wordpress

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wordpress

  template:
    metadata:
      labels:
        app: wordpress

    spec:
      tolerations:
      - key: "environment"
        operator: "Equal"
        value: "production"
        effect: "NoSchedule"

      containers:
      - name: wp-container
        image: wordpress:latest

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"

          limits:
            cpu: "300m"
            memory: "300Mi"

        volumeMounts:
        - name: wp-storage
          mountPath: /var/www/html

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3

      volumes:
      - name: wp-storage
        persistentVolumeClaim:
          claimName: local-pvc-wp
