mysql-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-service
  namespace: wordpress
spec:
  selector:
    app: mysql
  ports:
  - name: mysql-ports
    protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
